--- a/crm_partner_assign/i18n/zh_CN.po
+++ b/crm_partner_assign/i18n/zh_CN.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2012-12-21 17:05+0000\n"
-"PO-Revision-Date: 2013-07-23 03:45+0000\n"
+"PO-Revision-Date: 2013-07-23 06:22+0000\n"
 "Last-Translator: fanvil <fanvil@hotmail.com>\n"
 "Language-Team: Chinese (Simplified) <zh_CN@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-07-23 05:01+0000\n"
+"X-Launchpad-Export-Date: 2013-07-24 05:31+0000\n"
 "X-Generator: Launchpad (build 16700)\n"
 
 #. module: crm_partner_assign
@@ -471,7 +471,7 @@ msgstr "子信息"
 #: field:crm.partner.report.assign,date_review:0
 #: field:res.partner,date_review:0
 msgid "Latest Partner Review"
-msgstr ""
+msgstr "最新合作伙伴评论"
 
 #. module: crm_partner_assign
 #: field:crm.lead.forward.to.partner,subject:0
@@ -481,17 +481,17 @@ msgstr "主题"
 #. module: crm_partner_assign
 #: view:crm.lead.forward.to.partner:0
 msgid "or"
-msgstr ""
+msgstr "或"
 
 #. module: crm_partner_assign
 #: field:crm.lead.forward.to.partner,body:0
 msgid "Contents"
-msgstr ""
+msgstr "内容"
 
 #. module: crm_partner_assign
 #: field:crm.lead.forward.to.partner,vote_user_ids:0
 msgid "Votes"
-msgstr ""
+msgstr "投票"
 
 #. module: crm_partner_assign
 #: view:crm.lead.report.assign:0
@@ -501,13 +501,13 @@ msgstr "#商机"
 #. module: crm_partner_assign
 #: help:crm.lead.forward.to.partner,starred:0
 msgid "Current user has a starred notification linked to this message"
-msgstr ""
+msgstr "当前用户用 星号 提醒关联到这条消息"
 
 #. module: crm_partner_assign
 #: field:crm.partner.report.assign,date_partnership:0
 #: field:res.partner,date_partnership:0
 msgid "Partnership Date"
-msgstr ""
+msgstr "合作关系日期"
 
 #. module: crm_partner_assign
 #: view:crm.lead:0
@@ -661,7 +661,7 @@ msgstr ""
 #. module: crm_partner_assign
 #: field:crm.partner.report.assign,period_id:0
 msgid "Invoice Period"
-msgstr ""
+msgstr "发票期间"
 
 #. module: crm_partner_assign
 #: model:ir.model,name:crm_partner_assign.model_res_partner_grade
@@ -682,7 +682,7 @@ msgstr "附件"
 #. module: crm_partner_assign
 #: field:crm.lead.forward.to.partner,record_name:0
 msgid "Message Record Name"
-msgstr ""
+msgstr "消息记录名称"
 
 #. module: crm_partner_assign
 #: field:res.partner.activation,sequence:0
@@ -696,7 +696,7 @@ msgstr "序列"
 msgid ""
 "Cannot contact geolocation servers. Please make sure that your internet "
 "connection is up and running (%s)."
-msgstr ""
+msgstr "无法连接地理信息服务器。请确保你的互联网链接畅通(%s)。"
 
 #. module: crm_partner_assign
 #: selection:crm.lead.report.assign,month:0
@@ -722,7 +722,7 @@ msgstr "开启"
 #. module: crm_partner_assign
 #: field:crm.lead.forward.to.partner,subtype_id:0
 msgid "Subtype"
-msgstr ""
+msgstr "子类型"
 
 #. module: crm_partner_assign
 #: field:res.partner,date_localization:0
@@ -737,12 +737,12 @@ msgstr "当前的"
 #. module: crm_partner_assign
 #: model:ir.model,name:crm_partner_assign.model_crm_lead
 msgid "Lead/Opportunity"
-msgstr ""
+msgstr "线索/商机"
 
 #. module: crm_partner_assign
 #: field:crm.lead.forward.to.partner,notified_partner_ids:0
 msgid "Notified partners"
-msgstr ""
+msgstr "已通知的合作伙伴"
 
 #. module: crm_partner_assign
 #: view:crm.lead.forward.to.partner:0
@@ -773,7 +773,7 @@ msgstr "可能收入"
 #: field:res.partner,activation:0
 #: view:res.partner.activation:0
 msgid "Activation"
-msgstr ""
+msgstr "激活"
 
 #. module: crm_partner_assign
 #: view:crm.lead:0
@@ -784,12 +784,12 @@ msgstr "指定的业务伙伴"
 #. module: crm_partner_assign
 #: field:res.partner,grade_id:0
 msgid "Partner Level"
-msgstr ""
+msgstr "合作伙伴级别"
 
 #. module: crm_partner_assign
 #: help:crm.lead.forward.to.partner,to_read:0
 msgid "Current user has an unread notification linked to this message"
-msgstr ""
+msgstr "当前用户有关联到这条消息的未读的提醒"
 
 #. module: crm_partner_assign
 #: selection:crm.lead.report.assign,type:0
@@ -815,7 +815,7 @@ msgstr "名称"
 #: model:ir.actions.act_window,name:crm_partner_assign.res_partner_activation_act
 #: model:ir.ui.menu,name:crm_partner_assign.res_partner_activation_config_mi
 msgid "Partner Activations"
-msgstr ""
+msgstr "合作伙伴激活"
 
 #. module: crm_partner_assign
 #: view:crm.lead.report.assign:0
@@ -872,7 +872,7 @@ msgstr "客户关系管理 线索报表"
 #. module: crm_partner_assign
 #: field:crm.lead.forward.to.partner,composition_mode:0
 msgid "Composition mode"
-msgstr ""
+msgstr "写作模式"
 
 #. module: crm_partner_assign
 #: field:crm.lead.forward.to.partner,model:0
