--- a/account/i18n/mn.po
+++ b/account/i18n/mn.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-14 22:29+0000\n"
-"PO-Revision-Date: 2013-07-06 05:49+0000\n"
-"Last-Translator: gobi <Unknown>\n"
+"PO-Revision-Date: 2013-07-24 07:32+0000\n"
+"Last-Translator: wsubuntu <Unknown>\n"
 "Language-Team: Mongolian <mn@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-07-11 05:41+0000\n"
-"X-Generator: Launchpad (build 16696)\n"
+"X-Launchpad-Export-Date: 2013-07-25 05:43+0000\n"
+"X-Generator: Launchpad (build 16700)\n"
 
 #. module: account
 #: model:process.transition,name:account.process_transition_supplierreconcilepaid0
@@ -269,7 +269,7 @@ msgstr "батлагдах"
 #. module: account
 #: model:account.account.type,name:account.account_type_income_view1
 msgid "Income View"
-msgstr "Орлого харах"
+msgstr "Орлого харагдац"
 
 #. module: account
 #: help:account.account,user_type:0
@@ -5502,7 +5502,7 @@ msgstr "Хэрэв энэ компани нь хуулийн этгээд бол
 #: model:account.account.type,name:account.conf_account_type_chk
 #: selection:account.bank.accounts.wizard,account_type:0
 msgid "Check"
-msgstr "Шалгах"
+msgstr "Чек"
 
 #. module: account
 #: view:account.aged.trial.balance:0
@@ -7146,7 +7146,7 @@ msgstr "Касс"
 #: model:account.account.type,name:account.account_type_cash_equity
 #: model:account.account.type,name:account.conf_account_type_equity
 msgid "Equity"
-msgstr "Тэгшитгэл"
+msgstr "Өөрийн хөрөнгө"
 
 #. module: account
 #: field:account.journal,internal_account_id:0
@@ -9672,7 +9672,7 @@ msgstr ""
 #: model:account.account.type,name:account.data_account_type_expense
 #: model:account.financial.report,name:account.account_financial_report_expense0
 msgid "Expense"
-msgstr "Зарлага"
+msgstr "Зардал"
 
 #. module: account
 #: help:account.chart,fiscalyear:0
