--- a/account/i18n/nl.po
+++ b/account/i18n/nl.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-14 22:29+0000\n"
-"PO-Revision-Date: 2013-07-16 08:55+0000\n"
+"PO-Revision-Date: 2013-07-29 12:00+0000\n"
 "Last-Translator: Erwin van der Ploeg (Endian Solutions) <Unknown>\n"
 "Language-Team: Dutch <nl@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-07-17 07:24+0000\n"
-"X-Generator: Launchpad (build 16696)\n"
+"X-Launchpad-Export-Date: 2013-07-30 04:57+0000\n"
+"X-Generator: Launchpad (build 16700)\n"
 
 #. module: account
 #: model:process.transition,name:account.process_transition_supplierreconcilepaid0
@@ -264,7 +264,7 @@ msgstr "Belgische overzichten"
 #. module: account
 #: model:mail.message.subtype,name:account.mt_invoice_validated
 msgid "Validated"
-msgstr "Gevalideerd"
+msgstr "Bevestigd"
 
 #. module: account
 #: model:account.account.type,name:account.account_type_income_view1
@@ -2156,7 +2156,7 @@ msgstr "Voorlopige overzicht"
 #. module: account
 #: model:mail.message.subtype,description:account.mt_invoice_validated
 msgid "Invoice validated"
-msgstr "Factuur gevalideerd"
+msgstr "Factuur bevestigd"
 
 #. module: account
 #: field:account.config.settings,module_account_check_writing:0
@@ -4171,7 +4171,7 @@ msgid ""
 "                                    your supplier/customer."
 msgstr ""
 "U heeft de mogelijkheid om deze credit factuur\n"
-"                                    direct de bewerken en te valideren of "
+"                                    direct de bewerken en te bevestigen of "
 "deze\n"
 "                                    in concept te laten staan en te wachten "
 "totdat u\n"
@@ -4184,8 +4184,8 @@ msgid ""
 "All selected journal entries will be validated and posted. It means you "
 "won't be able to modify their accounting fields anymore."
 msgstr ""
-"Alle geselecteerde boekingen worden gevalideerd en geboekt. Daarmee kunnen "
-"de financiële gegevens ervan niet meer gewijzigd worden."
+"Alle geselecteerde boekingen worden bevestigd en geboekt. Daarmee kunnen de "
+"financiële gegevens ervan niet meer gewijzigd worden."
 
 #. module: account
 #: code:addons/account/account_move_line.py:98
@@ -6843,7 +6843,7 @@ msgid ""
 "You cannot validate this journal entry because account \"%s\" does not "
 "belong to chart of accounts \"%s\"."
 msgstr ""
-"U kunt deze boeking niet valideren omdat rekening \"%s\" niet tot het "
+"U kunt deze boeking niet bevestigen omdat rekening \"%s\" niet tot het "
 "rekeningschema \"%s\" behoort."
 
 #. module: account
