--- a/stock/i18n/zh_CN.po
+++ b/stock/i18n/zh_CN.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:36+0000\n"
-"PO-Revision-Date: 2013-07-28 14:28+0000\n"
+"PO-Revision-Date: 2013-07-30 14:20+0000\n"
 "Last-Translator: 盈通 ccdos <ccdos@163.com>\n"
 "Language-Team: Chinese (Simplified) <zh_CN@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-07-29 05:55+0000\n"
-"X-Generator: Launchpad (build 16700)\n"
+"X-Launchpad-Export-Date: 2013-07-31 06:09+0000\n"
+"X-Generator: Launchpad (build 16718)\n"
 
 #. module: stock
 #: field:stock.inventory.line.split,line_exist_ids:0
@@ -1440,6 +1440,13 @@ msgid ""
 "              </p>\n"
 "            "
 msgstr ""
+"<p class=\"oe_view_nocontent_create\">\n"
+"                创建一个新的凭证。\n"
+"              </p><p>\n"
+"                根据所执行操作的类型 或者 工人/团队 将要执行的操作，库存凭证系统允许你指定每个库存操作对应到指定的凭证。\n"
+"                例如库存凭证可以是：质量控制，分拣单，包装 等等。\n"
+"              </p>\n"
+"            "
 
 #. module: stock
 #: help:stock.location,chained_auto_packing:0
@@ -3007,6 +3014,13 @@ msgid ""
 "              </p>\n"
 "            "
 msgstr ""
+"<p class=\"oe_view_nocontent_create\">\n"
+"                添加一个库位。\n"
+"              </p><p>\n"
+"                这是你的公司的仓库和库位的结构。\n"
+"                您能点击一个库位，获得产品的清单，和它们在每个库位及其子库位中的库存情况。\n"
+"              </p>\n"
+"            "
 
 #. module: stock
 #: field:stock.location,stock_real:0
@@ -3169,6 +3183,10 @@ msgid ""
 "needs, etc.\n"
 "                This installs the module stock_location."
 msgstr ""
+"提供推送物流。这个特性的典型使用是：\n"
+"                管理产品的生产链，管理每个产品的默认库位，,\n"
+"                根据业务需要定义仓库的内路线等等。\n"
+"这需要安装模块 stock_location 。"
 
 #. module: stock
 #: view:stock.inventory:0
@@ -4089,6 +4107,8 @@ msgid ""
 "                to be invoiced when you send or deliver goods.\n"
 "                This installs the module stock_invoice_directly."
 msgstr ""
+"当您发送或交付货物，如果交付要开票，将能自动运行开票向导。\n"
+"这需要安装模块 stock_invoice_directly。"
 
 #. module: stock
 #: field:stock.location,chained_journal_id:0
