--- a/mrp/i18n/zh_CN.po
+++ b/mrp/i18n/zh_CN.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:36+0000\n"
-"PO-Revision-Date: 2013-07-22 13:01+0000\n"
-"Last-Translator: 盈通 ccdos <ccdos@163.com>\n"
+"PO-Revision-Date: 2013-08-02 06:02+0000\n"
+"Last-Translator: Joshua Jan(SHINEIT) <popkar77@gmail.com>\n"
 "Language-Team: Chinese (Simplified) <zh_CN@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-07-23 05:33+0000\n"
-"X-Generator: Launchpad (build 16700)\n"
+"X-Launchpad-Export-Date: 2013-08-03 06:13+0000\n"
+"X-Generator: Launchpad (build 16718)\n"
 
 #. module: mrp
 #: help:mrp.config.settings,module_mrp_repair:0
@@ -1775,8 +1775,8 @@ msgid ""
 "the quantity selected and it will finish the production order when total "
 "ordered quantities are produced."
 msgstr ""
-"'废料' 模式会仅消耗对应成品数量的原材料而无产成品产出。\n"
-"'报工' 模式会消耗对应成品数量的原材料而且产出对应数量的产成品。"
+"'投料' 模式会仅消耗对应成品数量的原材料暂无产成品产出。\n"
+"'投料并产出' 模式会消耗对应成品数量的原材料并立即产出对应数量的产成品。"
 
 #. module: mrp
 #: view:mrp.production:0
@@ -1987,7 +1987,7 @@ msgstr "新建"
 #. module: mrp
 #: selection:mrp.product.produce,mode:0
 msgid "Consume Only"
-msgstr "废料"
+msgstr "投料"
 
 #. module: mrp
 #: view:mrp.production:0
@@ -2167,7 +2167,7 @@ msgstr "用户"
 #. module: mrp
 #: selection:mrp.product.produce,mode:0
 msgid "Consume & Produce"
-msgstr "报工"
+msgstr "投料并产出"
 
 #. module: mrp
 #: field:mrp.bom,bom_id:0
