--- a/account/i18n/bs.po
+++ b/account/i18n/bs.po
@@ -9,13 +9,13 @@ msgstr ""
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-14 22:29+0000\n"
 "PO-Revision-Date: 2013-08-06 00:12+0000\n"
-"Last-Translator: Bosko Stojakovic <Unknown>\n"
+"Last-Translator: Bosko Stojakovic <bluesoft83@gmail.com>\n"
 "Language-Team: Bosnian <bs@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-08-06 05:04+0000\n"
-"X-Generator: Launchpad (build 16718)\n"
+"X-Launchpad-Export-Date: 2013-08-07 05:03+0000\n"
+"X-Generator: Launchpad (build 16721)\n"
 
 #. module: account
 #: model:process.transition,name:account.process_transition_supplierreconcilepaid0
