--- a/mail/i18n/pt.po
+++ b/mail/i18n/pt.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:36+0000\n"
-"PO-Revision-Date: 2013-02-07 16:59+0000\n"
+"PO-Revision-Date: 2013-08-14 15:49+0000\n"
 "Last-Translator: Andrei Talpa (multibase.pt) <andrei.talpa@multibase.pt>\n"
 "Language-Team: Portuguese <pt@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-07-11 06:08+0000\n"
-"X-Generator: Launchpad (build 16696)\n"
+"X-Launchpad-Export-Date: 2013-08-15 05:51+0000\n"
+"X-Generator: Launchpad (build 16723)\n"
 
 #. module: mail
 #: view:mail.followers:0
@@ -512,7 +512,7 @@ msgstr "Assunto"
 #. module: mail
 #: field:mail.wizard.invite,partner_ids:0
 msgid "Partners"
-msgstr ""
+msgstr "Parceiros"
 
 #. module: mail
 #: view:mail.mail:0
@@ -570,7 +570,7 @@ msgstr "Enviar"
 #: code:addons/mail/static/src/js/mail_followers.js:153
 #, python-format
 msgid "No followers"
-msgstr ""
+msgstr "Sem seguidores"
 
 #. module: mail
 #: view:mail.mail:0
@@ -698,7 +698,7 @@ msgstr "Grupo autorizado"
 #. module: mail
 #: view:mail.group:0
 msgid "Join Group"
-msgstr ""
+msgstr "Juntar-se ao grupo"
 
 #. module: mail
 #: help:mail.mail,email_from:0
@@ -716,7 +716,7 @@ msgstr ""
 #: code:addons/mail/wizard/invite.py:40
 #, python-format
 msgid "<div>You have been invited to follow a new document.</div>"
-msgstr ""
+msgstr "<div>Foi convidado para seguir um novo documento.</div>"
 
 #. module: mail
 #: field:mail.compose.message,parent_id:0
@@ -970,7 +970,7 @@ msgstr ""
 #. module: mail
 #: field:mail.alias,alias_user_id:0
 msgid "Owner"
-msgstr ""
+msgstr "Proprietário"
 
 #. module: mail
 #: code:addons/mail/res_partner.py:52
@@ -1732,7 +1732,7 @@ msgstr ""
 #. module: mail
 #: field:mail.compose.message,composition_mode:0
 msgid "Composition mode"
-msgstr ""
+msgstr "Modo de composição"
 
 #. module: mail
 #: help:mail.message.subtype,res_model:0
