--- a/sale_stock/i18n/pt.po
+++ b/sale_stock/i18n/pt.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:37+0000\n"
-"PO-Revision-Date: 2012-12-21 23:00+0000\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2013-08-14 17:03+0000\n"
+"Last-Translator: Ricardo Santa Ana <ricardosantana@gmail.com>\n"
 "Language-Team: Portuguese <pt@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-07-11 06:22+0000\n"
-"X-Generator: Launchpad (build 16696)\n"
+"X-Launchpad-Export-Date: 2013-08-15 05:51+0000\n"
+"X-Generator: Launchpad (build 16723)\n"
 
 #. module: sale_stock
 #: help:sale.config.settings,group_invoice_deli_orders:0
@@ -86,6 +86,8 @@ msgstr ""
 msgid ""
 "You must first cancel all delivery order(s) attached to this sales order."
 msgstr ""
+"Primeiro deve cancelar todas as ordens de entrega anexas a esta ordem de "
+"venda."
 
 #. module: sale_stock
 #: model:process.transition,name:sale_stock.process_transition_saleprocurement0
@@ -135,12 +137,12 @@ msgstr "Ação inválida!"
 #. module: sale_stock
 #: field:sale.config.settings,module_project_timesheet:0
 msgid "Project Timesheet"
-msgstr ""
+msgstr "Horário do Projecto"
 
 #. module: sale_stock
 #: field:sale.config.settings,group_sale_delivery_address:0
 msgid "Allow a different address for delivery and invoicing "
-msgstr ""
+msgstr "Permitir uma morada diferente de facturação e entrega "
 
 #. module: sale_stock
 #: code:addons/sale_stock/sale_stock.py:572
@@ -157,7 +159,7 @@ msgstr "Ordem de aquisição"
 #. module: sale_stock
 #: model:ir.actions.act_window,name:sale_stock.res_partner_rule_children
 msgid "Contact Details"
-msgstr ""
+msgstr "Detalhes do Contacto"
 
 #. module: sale_stock
 #: selection:sale.config.settings,default_order_policy:0
@@ -212,7 +214,7 @@ msgstr "Forçar Atribuição"
 #. module: sale_stock
 #: field:sale.config.settings,default_order_policy:0
 msgid "The default invoicing method is"
-msgstr ""
+msgstr "O método de facturação por omissão é"
 
 #. module: sale_stock
 #: field:sale.order.line,delay:0
@@ -237,7 +239,7 @@ msgstr "Movimentos do Inventário"
 #. module: sale_stock
 #: view:sale.config.settings:0
 msgid "Default Options"
-msgstr ""
+msgstr "Opções por Omissão"
 
 #. module: sale_stock
 #: field:sale.config.settings,module_project_mrp:0
@@ -292,7 +294,7 @@ msgstr ""
 #. module: sale_stock
 #: field:sale.config.settings,group_invoice_deli_orders:0
 msgid "Generate invoices after and based on delivery orders"
-msgstr ""
+msgstr "Gera facturas depois e baseadas em ordens de entrega"
 
 #. module: sale_stock
 #: field:sale.config.settings,module_delivery:0
@@ -564,6 +566,7 @@ msgid ""
 "This is a list of delivery orders that has been generated for this sales "
 "order."
 msgstr ""
+"Isto é a lista de ordens de entrega que foi gerada para esta ordem de venda ."
 
 #. module: sale_stock
 #: model:process.node,name:sale_stock.process_node_saleorderprocurement0
@@ -598,7 +601,7 @@ msgstr ""
 #. module: sale_stock
 #: help:sale.config.settings,group_multiple_shops:0
 msgid "This allows to configure and use multiple shops."
-msgstr ""
+msgstr "Permite configurar e usar múltiplas lojas."
 
 #. module: sale_stock
 #: field:sale.order,picked_rate:0
